--- a/Data/Website/Styles/Shops.css
+++ b/Data/Website/Styles/Shops.css
@@ -9,9 +9,6 @@
     gap : 2rem ;
 
     padding : 3.5rem ;
-
-    max-height : 100vh ;
-    overflow-x : hidden ;
 }
 
 
